# case_study_2

./: CMakeLists.txt  README.md  package.xml
config/: apriltags.yaml
launch/: apriltag_gazebo.launch  case_study_2_sim_bringup.launch
launch/internal/: apriltag_ros.launch  gazebo_world.launch  spawn_uav.launch
worlds/: recovery_scene_no_ground.world
